# spotify-widget

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.cert/: cert.pem  key.pem
docs/: ARCHITECTURE.md  DEPLOYMENT.md
scripts/: generate-cert.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/api/: spotify.ts
src/components/: AlbumCover.tsx  AudioSettings.tsx  Background.tsx  CollaborativeSession.tsx  Controls.tsx  Equalizer.tsx  HomeView.tsx  KeyboardShortcuts.tsx  Lyrics.tsx  NotificationContainer.tsx  Player.tsx  PlayerSkeleton.tsx  PodcastControls.tsx  ProgressBar.tsx  Settings.tsx  ThemeCustomizer.tsx  Visualizer.tsx  WidgetPosition.tsx
src/contexts/: NotificationContext.tsx
src/hooks/: useGestures.ts  useNotification.ts  useSleepTimer.ts  useSmartHome.ts  useSpotify.ts  useTheme.ts  useTrackHistory.ts
